--- a/portafolio.css
+++ b/portafolio.css
@@ -340,8 +340,8 @@ h2 {
 }
 
 .accept-btn {
-    background-color: #4CAF50;
-    color: #ffffff;
+    background-color: #ffffff;
+    color: #000000;
     border: none;
     padding: 10px 20px;
     cursor: pointer;
@@ -350,5 +350,6 @@ h2 {
 }
 
 .accept-btn:hover {
-    background-color: #45a049;
+    background-color: #636363;
+    color: #ffffff;
 }
